<resources>
    <string name="app_name">Torem</string>
    <string name="join">JOIN THE JOURNEY</string>
    <string name="PSE"></string>
    <string name="getstarted">Get Started</string>
    <string name="no_email">Please enter your email address</string>
    <string name="no_password">Please enter your password</string>
    <string name="no_conf_password">Please confirm your password</string>
    <string name="no_name">Please enter your name</string>
    <string name="password_no_match">Your password doesnt match</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_wait">Please Wait</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="to_your_account">to your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="Ddummy"></string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
</resources>